[package]
name = "proto-code-gen"
version = "0.1.0"
authors = ["Ken <2770219+ken0x0a@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = { version = "0.6", optional = true }
tonic-build = { git = "https://github.com/hyperium/tonic", rev = "02499fdfd35144855846250abe6661f7b80c1f90", features = ["prost"] }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["transport", "rustfmt", "prost"]
rustfmt = []
transport = []
prost = ["prost-build"]

[package.metadata.docs.rs]
all-features = true
