[package]
name = "tonic-build-with-code-gen"
version = "0.1.0"
authors = ["Ken <ken0x0a+gh@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ken0x0a/tonic-build-with-code-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = { version = "0.6", optional = true }
tonic-build = { git = "https://github.com/hyperium/tonic", rev = "8212afdf8561e7d01adb1b09f401bd633c044a8d", features = ["prost"] }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["transport", "rustfmt", "prost"]
rustfmt = []
transport = []
prost = ["prost-build"]

[package.metadata.docs.rs]
all-features = true
